Added the CSS to the website and linked it to the html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav>
+    <nav class="fixed-top">
       <a href="">Home</a>
       <a href="">About</a>
       <a href="">Contact</a>
