Edited the html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </nav>
     <h1 class="text-center mb-3 text-success">Croissant</h1>
     <img
-      class="img-fluid mx-auto d-block rounded shadow border border-white p-2"
-      height="50px"
+      class="img-fluid mx-auto d-block rounded shadow border border-white p-2 mb-5"
+      width="500px"
       src="https://data.thefeedfeed.com/recommended/post_3705280.jpeg"
       alt="Croissant_img"
     />
