--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="fixed-top p-1">
+      <nav class="fixed-top p-2">
         <a class="logo-title" href="#">
           <img
             class="img-fluid"
@@ -41,7 +41,7 @@
           Croissant</a
         >
         <div class="nav-links p-2">
-          <a href="">Home</a>
+          <a href="/">Home</a>
           <a href="">Photo</a>
           <a href="">Contact</a>
         </div>
@@ -71,7 +71,9 @@
         kipferl (which have possible but unconfirmed roots in ancient Egypt),
         are also considered to be a form of rugelach, a Jewish pastry of
         Ashkenazic origin. They are denser and sweeter to what we think of as
-        the modern croissant.
+        the modern croissant. <br />
+        To find out more about nicely baked sweet croissants, click on the link
+        below 👇
       </p>
       <div class="mb-5 homepage-button">
         <a class="button shadow" href="https://en.wikipedia.org/wiki/Croissant"
