Created a new file photo.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           Croissant</a
         >
         <div class="nav-links p-2">
-          <a href="/">Home</a>
+          <a class="active" href="/">Home</a>
           <a href="">Photo</a>
           <a href="">Contact</a>
         </div>
