Edited the index.html page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img
             class="img-fluid"
             src="images/Croissant_image-removebg-preview.png"
-            width="40px"
+            width="35px"
             alt="logo"
           />
           Croissant</a
@@ -55,13 +55,6 @@
         alt="Croissant_img"
       />
 
-      <p>
-        "A perfect croissant, it's a very crispy croissant with a lot of puff
-        pastry, and it smells a good taste of butter inside," Duchêne says. "A
-        bad croissant is very soft, like a brioche, and you can't have a very
-        good smell of butter, it's not creamy inside. "It takes a lot of time
-        and process to make a good croissant."
-      </p>
       <p class="mb-5">
         Croissants are a style of viennoiserie pastries, which of course relates
         back to the Austrian city of Vienna, otherwise known as the birthplace
@@ -75,7 +68,7 @@
         To find out more about nicely baked sweet croissants, click on the link
         below 👇
       </p>
-      <div class="mb-5 homepage-button">
+      <div class="mb-5 homepage-button text-center">
         <a class="button shadow" href="https://en.wikipedia.org/wiki/Croissant"
           >Find Out More</a
         >
