Added media query to the photo.html page

--- a/photo.html
+++ b/photo.html
@@ -53,22 +53,22 @@
         good smell of butter, it's not creamy inside. "It takes a lot of time
         and process to make a good croissant."
       </p>
-      <div class="row mt-3">
-        <div class="col-md-4">
+      <div class="row mt-3 image-section">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/YY5nnRpUCBgZywa5s_cc9H5D-cU=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/2018/01/10/SLIDE%20stuffed%20coissant%20iStock_0.jpg"
             alt=""
           />
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
             alt=""
           />
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/VXM5MhOFfJJmoA35xaMT5CvIHZk=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/3-apple%20stuffed%20croissant%20turnover-shutterstock_102390430_0_0.jpg"
@@ -76,28 +76,136 @@
           />
         </div>
       </div>
-      <div class="row mt-3 mb-3">
-        <div class="col-md-4">
+      <div class="row mt-3 mb-3 image-section">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/0oU0HTEmpIgivMf3fnaQwmJKmxw=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/5-berries%20stuffed%20croissant-ThinkstockPhotos-527748041_0_0.jpg"
             alt=""
           />
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/o1-KhEVdI9jm2i8lXGk89bsVZtQ=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/17-nutella%20chocolate%20croissant-shutterstock_184290470_0_0.jpg"
             alt=""
           />
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/MkX2bCwBxlDIyysDsR9ahSTYssM=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/14-ham%20croissant-ThinkstockPhotos-464471968_0_0.jpg"
             alt=""
           />
         </div>
+      </div>
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide mb-3 d-block d-sm-none"
+        data-interval="false"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="4"
+            aria-label="Slide 5"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="5"
+            aria-label="Slide 6"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://thumbor.thedailymeal.com/VXM5MhOFfJJmoA35xaMT5CvIHZk=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/3-apple%20stuffed%20croissant%20turnover-shutterstock_102390430_0_0.jpg"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://thumbor.thedailymeal.com/0oU0HTEmpIgivMf3fnaQwmJKmxw=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/5-berries%20stuffed%20croissant-ThinkstockPhotos-527748041_0_0.jpg"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://thumbor.thedailymeal.com/o1-KhEVdI9jm2i8lXGk89bsVZtQ=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/17-nutella%20chocolate%20croissant-shutterstock_184290470_0_0.jpg"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://thumbor.thedailymeal.com/MkX2bCwBxlDIyysDsR9ahSTYssM=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/14-ham%20croissant-ThinkstockPhotos-464471968_0_0.jpg"
+              class="d-block w-100 rounded shadow p-2 border border-danger border-5"
+              alt="..."
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </body>
