--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
       <div class="container">
         <h1 class="text-center mb-3 text-success">Contact</h1>
         <p class="contact-paragraph">I'm sure you must have had a bite or you're about to have a bite of some crispy sweet croissants already! 😋</p>
-        <p class="contact-paragraph"> Well... Please do well to contact me for more enquiries/information on croissants at <br> <a href="mailto:rozzeymarvin32@gmail.com">rozzeymarvin32@gmail.com</a></p>
+        <p class="contact-paragraph"> Well... Please do well to contact me for more enquiries/information on croissants at 👇 <br><br> <a href="mailto:rozzeymarvin32@gmail.com">rozzeymarvin32@gmail.com</a></p>
 
       </div>
   </body>
