--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Smooch&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/contact.css" />
   </head>
   <body>
     <div class="container">
