--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
       <p class="mb-5">
         Croissants are a style of viennoiserie pastries, which of course relates
         back to the Austrian city of Vienna, otherwise known as the birthplace
-        of croissants. The ancestor to the modern-day croissant was called the
-        kipferl, which dates back to the 13th century and comes in various
-        shapes and sizes. They are often filled with nuts or other fillings, and
+        of croissants. They are often filled with nuts or other fillings, and
         kipferl (which have possible but unconfirmed roots in ancient Egypt),
         are also considered to be a form of rugelach, a Jewish pastry of
         Ashkenazic origin. They are denser and sweeter to what we think of as
