Edited the photos page and made the website SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Croissants are sweet and nicely baked pastries">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant | Contact</title>
@@ -48,7 +49,7 @@
       <div class="container">
         <h1 class="text-center mb-3 text-success">Contact</h1>
         <p class="contact-paragraph">I'm sure you must have had a bite or you're about to have a bite of some crispy sweet croissants already! 😋</p>
-        <p class="contact-paragraph"> Well... Please do well to email me for more enquiries/information on croissants at 👇 <br><br> <a href="mailto:rozzeymarvin32@gmail.com">rozzeymarvin32@gmail.com</a></p>
+        <p class="contact-paragraph"> Well... Please do well to email me for more enquiries/information on croissants at 👇 <br><br> <a href="mailto:rozzeymarvin32@gmail.com" title="email">rozzeymarvin32@gmail.com</a></p>
 
       </div>
   </body>
