--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Croissants are sweet and nicely baked pastries"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant | Home</title>
@@ -67,7 +71,10 @@
         below 👇
       </p>
       <div class="mb-5 homepage-button text-center">
-        <a class="button shadow" href="https://en.wikipedia.org/wiki/Croissant"
+        <a
+          class="button shadow"
+          href="https://en.wikipedia.org/wiki/Croissant"
+          title="croissants"
           >Find Out More</a
         >
       </div>
