--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Croissants are sweet and nicely baked pastries"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant | Photos</title>
@@ -58,21 +62,21 @@
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/YY5nnRpUCBgZywa5s_cc9H5D-cU=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/2018/01/10/SLIDE%20stuffed%20coissant%20iStock_0.jpg"
-            alt=""
+            alt="croissant-image"
           />
         </div>
         <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
-            alt=""
+            alt="croissant-image"
           />
         </div>
         <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/VXM5MhOFfJJmoA35xaMT5CvIHZk=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/3-apple%20stuffed%20croissant%20turnover-shutterstock_102390430_0_0.jpg"
-            alt=""
+            alt="croissant-image"
           />
         </div>
       </div>
@@ -81,21 +85,21 @@
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/0oU0HTEmpIgivMf3fnaQwmJKmxw=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/5-berries%20stuffed%20croissant-ThinkstockPhotos-527748041_0_0.jpg"
-            alt=""
+            alt="croissant-image"
           />
         </div>
         <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/o1-KhEVdI9jm2i8lXGk89bsVZtQ=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/17-nutella%20chocolate%20croissant-shutterstock_184290470_0_0.jpg"
-            alt=""
+            alt="croissant-image"
           />
         </div>
         <div class="col-sm-4">
           <img
             class="img-fluid rounded shadow p-2 border border-danger border-5"
             src="https://thumbor.thedailymeal.com/MkX2bCwBxlDIyysDsR9ahSTYssM=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/14-ham%20croissant-ThinkstockPhotos-464471968_0_0.jpg"
-            alt=""
+            alt="croissant-image"
           />
         </div>
       </div>
@@ -147,44 +151,44 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
+              src="https://thumbor.thedailymeal.com/YY5nnRpUCBgZywa5s_cc9H5D-cU=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/2018/01/10/SLIDE%20stuffed%20coissant%20iStock_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://d2culxnxbccemt.cloudfront.net/craft/content/uploads/2017/04/21132052/chocolate-croissants-1536x1018.png"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://thumbor.thedailymeal.com/VXM5MhOFfJJmoA35xaMT5CvIHZk=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/3-apple%20stuffed%20croissant%20turnover-shutterstock_102390430_0_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://thumbor.thedailymeal.com/0oU0HTEmpIgivMf3fnaQwmJKmxw=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/5-berries%20stuffed%20croissant-ThinkstockPhotos-527748041_0_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://thumbor.thedailymeal.com/o1-KhEVdI9jm2i8lXGk89bsVZtQ=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/17-nutella%20chocolate%20croissant-shutterstock_184290470_0_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
           <div class="carousel-item">
             <img
               src="https://thumbor.thedailymeal.com/MkX2bCwBxlDIyysDsR9ahSTYssM=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/slides/14-ham%20croissant-ThinkstockPhotos-464471968_0_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
-              alt="..."
+              alt="croissant-image"
             />
           </div>
         </div>
