Restructured  the website

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/contact.css" />
+    <script
+      src="https://kit.fontawesome.com/3517f2cd4f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -49,7 +53,29 @@
       <div class="container">
         <h1 class="text-center mb-3 text-success">Contact</h1>
         <p class="contact-paragraph">I'm sure you must have had a bite or you're about to have a bite of some crispy sweet croissants already! 😋</p>
-        <p class="contact-paragraph"> Well... Please do well to email me for more enquiries/information on croissants at 👇 <br><br> <a href="mailto:rozzeymarvin32@gmail.com" title="email">rozzeymarvin32@gmail.com</a></p>
+        <p class="contact-paragraph mb-5"> Well... Please do well to email me for more enquiries/information on croissants at 👇 <br><br> <a href="mailto:rozzeymarvin32@gmail.com" title="email">rozzeymarvin32@gmail.com</a></p>
+        <footer>
+        
+        <div class="text-center mb-5 social-links">
+          <a
+            href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+            target="_blank"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i
+          ></a>
+          <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
+          <a href="https://github.com/marvinrose/" target="_blank"
+            ><i class="fa fa-github" aria-hidden="true"></i
+          ></a>
+          <a href="https://twitter.com/rozzey_marvin/" target="_blank"
+            ><i class="fa fa-twitter" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div class="text-center mb-2">
+          <small>&copy;2022- Made with ❤️ by Marvinrose</small>
+        </div>
+      </footer>
 
       </div>
   </body>
