--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://kit.fontawesome.com/3517f2cd4f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -78,6 +82,32 @@
           >Find Out More</a
         >
       </div>
+      <footer>
+        <div class="text-center mb-5 mt-5">
+          <a class="mail-link" href="mailto:rozzeymarvin32@gmail.com"
+            >rozzeymarvin32@gmail.com</a
+          >
+        </div>
+        <div class="text-center mb-5 social-links">
+          <a
+            href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+            target="_blank"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i
+          ></a>
+          <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
+          <a href="https://github.com/marvinrose/" target="_blank"
+            ><i class="fa fa-github" aria-hidden="true"></i
+          ></a>
+          <a href="https://twitter.com/rozzey_marvin/" target="_blank"
+            ><i class="fa fa-twitter" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div class="text-center mb-2">
+          <small>&copy;2022- Made with ❤️ by Marvinrose</small>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
