--- a/photo.html
+++ b/photo.html
@@ -29,6 +29,12 @@
       href="https://fonts.googleapis.com/css2?family=Smooch&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Playfair+Display+SC&family=Playfair+Display:wght@500&family=Poppins&family=Smooch&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <script
       src="https://kit.fontawesome.com/3517f2cd4f.js"
