Edited the homepage paragraph

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         alt="Croissant_img"
       />
 
-      <p class="mb-5">
+      <p class="mb-5 text-center">
         Croissants are a style of viennoiserie pastries, which of course relates
         back to the Austrian city of Vienna, otherwise known as the birthplace
         of croissants. They are often filled with nuts or other fillings, and
