--- a/photo.html
+++ b/photo.html
@@ -158,8 +158,8 @@
             aria-label="Slide 6"
           ></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        <div class="carousel-inner shadow">
+          <div class="carousel-item active shadow">
             <img
               src="https://thumbor.thedailymeal.com/YY5nnRpUCBgZywa5s_cc9H5D-cU=/870x565/filters:format(webp)/https://www.thedailymeal.com/sites/default/files/2018/01/10/SLIDE%20stuffed%20coissant%20iStock_0.jpg"
               class="d-block w-100 rounded shadow p-2 border border-danger border-5"
